several SEO improvements

--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,9 +1,12 @@
 ---
 layout: archive
-title: "Publications"
+title: "Publications - Mattia Bellini"
 permalink: /publications/
 author_profile: true
 ---
+<p>
+  You can find here my piblications on video games, narratives, complexity, and related fields.
+</p>
 
 {% if site.author.googlescholar %}
   <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
