--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,9 +1,13 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Talks and presentations - Mattia Bellini"
 permalink: /talks/
 author_profile: true
 ---
+
+<p>
+  You can find here my talks and presentations.
+</p>
 
 {% if site.talkmap_link == true %}
 
