--- a/_pages/portfolio.html
+++ b/_pages/portfolio.html
@@ -1,9 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
+title: "Portfolio - Mattia Bellini"
 permalink: /portfolio/
 author_profile: true
 ---
+
+<p>
+  You can find here information on my completed and ongoing creative and artistic projects.
+</p>
+
 
 {% include base_path %}
 
